fix: corrected stretching tabs in height

--- a/src/components/Tabs/Tab/Tab.css
+++ b/src/components/Tabs/Tab/Tab.css
@@ -1,6 +1,4 @@
 .tab {
-  align-self: flex-start;
-
   width: 100%;
 }
 
